arrays and outputs

--- a/index.html
+++ b/index.html
@@ -16747,7 +16747,14 @@ Time difference of 0.06340098 secs</code></pre>
 </ul>
 
 </div>
-</div></section></section><section><section>
+</div><div class="fragment">
+<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="Job-arrays-and-email-notifications">Job arrays and email notifications<a class="anchor-link" href="#Job-arrays-and-email-notifications">&#182;</a></h3><p><code>--mail-type=ALL</code> will send notifications only for the entire job (not for each job task)</p>
+<p>passing <code>ARRAY_TASKS</code> will send emails for each array task. e.g. <code>--mail-type=BEGIN,ARRAY_TASKS</code> will send an email every time a job array task starts.</p>
+
+</div>
+</div></div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h2 id="Conclusion">Conclusion<a class="anchor-link" href="#Conclusion">&#182;</a></h2><p>Thanks for attending WEHI's first intermediate Slurm workshop!</p>
