Add diagram of ssh to compute node

--- a/index.html
+++ b/index.html
@@ -15246,7 +15246,7 @@ gpu-a30-n03 gpuq       0/96/0/96     497816   511362   gpu:A30:0(IDX:N/A)  gpu:A
 <div style='text-align: right'>Basic Job Monitoring and Profiling 2</div><h3 id="Live-monitoring-of-jobs">Live monitoring of jobs<a class="anchor-link" href="#Live-monitoring-of-jobs">&#182;</a></h3><p>Slurm can't provide accurate "live" data about jobs' activities</p>
 <p>System tools must be used instead.</p>
 <p>This requires matching jobs to processes on a node with <code>squeue</code> and <code>ssh</code>.</p>
-<p>A bit of system understanding is also needed.</p>
+<p><img src="static/simple-cluster-diagram-sshcompute.png" alt="Cluster diagram ssh to node" width="800"></p>
 
 </div>
 </div></section><section>
